<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2017-2023 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        app:defaultValue="0"
        app:iconSpaceReserved="false"
        app:key="key_force_dark"
        app:summary="Only for web content"
        app:title="@string/pref_force_dark" />

    <SwitchPreference
        app:defaultValue="1"
        app:iconSpaceReserved="false"
        app:key="key_urlbar"
        app:summary="@string/pref_urlbar_summary" />

    <ListPreference
        app:defaultValue="@string/default_search_engine"
        app:entries="@array/pref_search_engine_entries"
        app:entryValues="@array/pref_search_engine_entryvalues"
        app:iconSpaceReserved="false"
        app:key="key_search_engine"
        app:title="@string/pref_search_engine"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:defaultValue="@string/default_suggestion_provider"
        app:entries="@array/pref_suggestions_provider_entries"
        app:entryValues="@array/pref_suggestions_provider_entryvalues"
        app:iconSpaceReserved="false"
        app:key="key_suggestion_provider"
        app:title="@string/pref_suggestions_provider"
        app:useSimpleSummaryProvider="true" />

    <Preference
        app:iconSpaceReserved="false"
        app:key="key_home_page"
        app:title="@string/pref_start_page" />

    <SwitchPreference
        app:defaultValue="0"
        app:iconSpaceReserved="false"
        app:key="key_advanced_share"
        app:summary="@string/pref_screenshot_snap_summary"
        app:title="@string/pref_screenshot_snap_title" />

    <SwitchPreference
        app:defaultValue="1"
        app:iconSpaceReserved="false"
        app:key="key_reach_mode"
        app:summary="@string/pref_reach_mode_summary"
        app:title="@string/pref_reach_mode_title" />

    <SeekBarPreference
        app:showSeekBarValue="true"
        app:defaultValue="50"
        app:min="30"
        app:iconSpaceReserved="false"
        app:key="key_dp_toolbar"
        app:summary="Adjust urlBarHeight"
        app:title="dpUrlBar" />

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_privacy_security">

        <SwitchPreference
            app:defaultValue="0"
            app:iconSpaceReserved="false"
            app:key="key_looklock"
            app:summary="@string/pref_looklock_summary"
            app:title="@string/pref_looklock_title" />

        <SwitchPreference
            app:defaultValue="1"
            app:iconSpaceReserved="false"
            app:key="key_save_form_data"
            app:title="@string/pref_save_form_data_title" />

        <SwitchPreference
            app:defaultValue="1"
            app:key="key_adblocker"
            app:iconSpaceReserved="false"
            app:summary="@string/pref_adblocker_summary"
            app:title="@string/pref_adblocker_title" />

        <SwitchPreference
            app:defaultValue="1"
            app:iconSpaceReserved="false"
            app:key="key_javascript"
            app:summary="@string/pref_js_summary"
            app:title="@string/pref_js_title" />

        <SwitchPreference
            app:defaultValue="1"
            app:iconSpaceReserved="false"
            app:key="key_location"
            app:summary="@string/pref_location_summary"
            app:title="@string/pref_location_title" />

        <SwitchPreference
            app:defaultValue="0"
            app:iconSpaceReserved="false"
            app:key="key_do_not_track"
            app:summary="@string/pref_do_not_track_summary"
            app:title="@string/pref_do_not_track_title" />

        <SwitchPreference
            app:defaultValue="0"
            app:iconSpaceReserved="false"
            app:key="key_random_useragent"
            app:summary="@string/pref_random_useragent_summary"
            app:title="@string/pref_random_useragent" />

        <SwitchPreference
            app:defaultValue="1"
            app:iconSpaceReserved="false"
            app:key="key_cookie"
            app:summary="@string/pref_cookie_summary"
            app:title="@string/pref_cookie_title" />

        <ListPreference
            app:defaultValue="0"
            app:iconSpaceReserved="false"
            app:entries="@array/pref_incognito_policy_entries"
            app:entryValues="@array/pref_incognito_policy_entryvalues"
            app:key="key_incognito_policy"
            app:summary="%s"
            app:title="@string/pref_incognito_policy" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="key_cookie_clear"
            app:title="@string/pref_cookie_clear" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="true"
        app:icon="@mipmap/ic_launcher_round"
        app:key="key_about_resume"
        app:title="About">

        <Preference
            app:iconSpaceReserved="false"
            app:key="key_about_notice"/>

        <Preference
            app:iconSpaceReserved="false"
            app:key="key_about_useragent"
            app:summary="WebView"
            app:title="UserAgent" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="key_about_whatsnew"
            app:summary="What's new"
            app:title="jQuarks version" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="key_about_jquarks"
            app:title="@string/pref_context" />
    </PreferenceCategory>
</PreferenceScreen>
