<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2017-2023 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_preference_background"
    android:paddingVertical="16dp">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="28dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/dismissButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sslCertificateInfoDialogTitle">

            <TextView
                android:id="@+id/url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:autoLink="web"
                android:textColor="?attr/colorOnSurfaceVariant" />
            <Button
                android:id="@+id/ping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ping"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/ssl_cert_dialog_title"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/virustotal"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_gravity="end"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:insetTop="2dp"
                    android:insetBottom="0dp"
                    android:text="@string/virustotal"
                    android:textColor="#FF6750a4"
                    android:backgroundTint="@color/lb_grey"
                    android:textSize="12dp"
                    android:padding="0dp"
                    app:cardCornerRadius="0dp"
                    app:rippleColor="@color/material_on_primary_emphasis_high_type"
                    app:shapeAppearance="@color/cardview_light_background"
                    android:background="?selectableItemBackgroundBorderless"
                    />

            </LinearLayout>

            <!-- Domain Name -->
            <TextView
                android:id="@+id/domain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:autoLink="all"
                android:textColor="?attr/colorOnSurfaceVariant" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <!-- Issued By -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ssl_cert_dialog_issued_by"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mywot"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_gravity="end"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:insetTop="2dp"
                android:insetBottom="0dp"
                android:text="@string/mywot"
                android:textColor="#FF6750a4"
                android:backgroundTint="@color/lb_grey"
                android:textSize="12dp"
                android:padding="0dp"
                app:cardCornerRadius="0dp"
                app:rippleColor="@color/material_on_primary_emphasis_high_type"
                app:shapeAppearance="@color/cardview_light_background"
                android:background="?selectableItemBackgroundBorderless"
                />

        </LinearLayout>

            <org.lineageos.jelly.ui.KeyValueView
                android:id="@+id/issuedByCnView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <org.lineageos.jelly.ui.KeyValueView
                android:id="@+id/issuedByOView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <org.lineageos.jelly.ui.KeyValueView
                android:id="@+id/issuedByUnView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/darker_gray"/>
            <org.lineageos.jelly.ui.KeyValueView
                android:id="@+id/x509"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/dismissButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@android:string/ok"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
